# agents-chat-channel

./: .gitignore  CHANNEL_MANAGEMENT_FIX.md  CHANNEL_MAX_MESSAGES_EDIT.md  CHANNEL_VIEW_SWITCH_FIX.md  LIVE_CHAT_GUIDE.md  MENTION_FEATURE_IMPLEMENTATION.md  README.md  SIMPLIFIED_WEBUI_IMPLEMENTATION.md  WEBUI_CLEANUP_GUIDE.md  WEBUI_OPTIMIZATION_COMPLETE.md  WEBUI_REFACTOR_REPORT.md  WORKER_CONFIG_LOADING.md  WORKER_MODE_SIMPLIFICATION.md  WORKSPACE_QUICK_START.md  pyproject.toml
archive/: README.md  bulletin_db.py.archived-2026-06-06
channels/: fish-market.jsonl  fish-market.jsonl.meta.json
data_v2/: README.md  scanner_state.json  scheduler_state.json
docs/: 01-author-abstraction.md  02-email-model.md  03-autogen-comparison.md  04-opencode-integration.md  05-qwen-integration.md  06-recipient-routing.md  07-network-policy.md  08-abstraction-tradeoffs.md  09-proactive-bulletin.md  10-dag-scheduling.md  11-v2-architecture.md  12-workspace-pattern.md  13-pdr-architecture.md  14-windows-compat.md  15-v2-architecture-overview.md  16-gates-and-worker-admin.md  17-server-api.md  18-decision-maker.md  19-channel-subscription.md  20-worker-channel-admin.md  21-event-driven-bus.md  21-webui-redesign.md  22-uds-bus.md  23-a2a-research.md  24-a2a-client.md  26-stage-workflow.md  27-workflow-examples.md
examples/: README.md  complex-4stage.yaml  diamond-dag.yaml  e2e_3channel.sh  e2e_autonomous.sh  e2e_bargain.sh  e2e_bargain_new.sh  e2e_bargain_opencode.sh  e2e_bargain_real.sh  e2e_v2.sh  e2e_v2_4comp.sh  e2e_workspace.sh  opencode-e2e.yaml  run_demo.sh  web_demo.sh  (+1 more)
(+200 files in other folders)
